Fix: Margin error which was visible in dark mode with DataTables styling

--- a/css/searchPanes.dataTables.scss
+++ b/css/searchPanes.dataTables.scss
@@ -12,7 +12,7 @@ div.dtsp-searchPane {
 		}
 
 		div.dt-scroll {
-			margin: -5px 0;
+			margin: -0.75em 0;
 		}
 
 		table.dataTable {
